# NpcapPractice

./: .gitignore  README.md  docker-compose.yml  구현 내용.txt
aggregator/: Dockerfile  README.md  app.py  requirements.txt
analyzer/: Dockerfile  README.md  app.py  l7.py  requirements.txt
capture-agent/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
capture-agent/src/: base64.hpp  capture.cpp  capture.hpp  main.cpp  redis_sink.cpp  redis_sink.hpp
db/: init.sql
grafana/dashboards/: overview.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: timescaledb.yaml
